# rust-design-patterns

./: Cargo.toml
behavioral/: iterator.rs  state.rs
creational/: builder.rs  factory.rs  singleton.rs
